--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                   </p> <p><strong>Contact Us</strong></p> <p>
                     If you have any questions or suggestions about
                     our Terms and Conditions, do not hesitate to
-                    contact us at sirmuel2077@gmail.com.
+                    contact us at studywithlawz@gmail.com.
                   </p>
     </body>
     </html>
